--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -4,8 +4,9 @@
         <li appStrikethrough>{{quote.name}} created on {{quote.completeDate|date|uppercase}}</li> 
         
         <button  (click)='toggleDetails(i)'>Toggle Details</button>
+        <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
 
-    <app-quote-details *ngIf="quote.showDescription" [quote]='quote' (isComplete)= 'completeQuote($event,i)'></app-quote-details>
+ 
     
     </div>
 </ul>
