--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,13 +1,23 @@
-<h1>My Quotes</h1>
-<ul>
-    <div *ngFor='let quote of quotes;let i = index'>
-        <li appStrikethrough>{{quote.name}} created on {{quote.completeDate|date|uppercase}}</li> 
-        
-        <button  (click)='toggleDetails(i)'>Toggle Details</button>
-        <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
-
- 
-    
+<div class="container">
+    <h1>MY Quotes</h1>
+    <hr>
+  
+    <div class="row">
+      <div class="col-md-6">
+        <div *ngFor='let quote of quotes;let i = index'>
+          <div>
+            <h6 id={{i}} appStrikethrough>{{quote.name}} created on {{quote.completeDate|date|uppercase}}</h6>
+            <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
+          </div>
+  
+          <div *ngIf='quote.showDescription'>
+            <app-quote-detail  [quote]='quote' (isComplete) = 'deleteQuote($event,i)'></app-quote-detail>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <app-quote-form></app-quote-form>
+      </div>
     </div>
-</ul>
-<p *ngIf='quotes.length > 5'>You have too many quotes</p>
+    <p *ngIf='quotes.length > 5'>You have too many interesting quotes</p>
+  </div>
