--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,16 +1,20 @@
 <div class="container-fluid">
     <h2 class="text-center">Create a interesting Quote</h2>
     <hr>
-    <form>
+    <form #quoteForm='ngForm'>
+    
         <div class="form-group">
   
             <label for="name">Name</label>
-            <input type="text" required class="form-control" id="name">
+            <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name">
+            
+            Display {{newQuote.name}}
+            
   
         </div>
         <div class="form-group">
   
-            <label for="description">Quote</label>
+            <label for="description">describe</label>
             <textarea class="form-control" id="description" rows="4" required></textarea>
   
         </div>
@@ -19,5 +23,6 @@
             <input type='date' id="complete" required>
   
         </div>
+        <button type="submit" class="btn btn-success">Add an interesting quote</button>
     </form>
   </div>
