--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -4,6 +4,8 @@
   
     <div class="row">
       <div class="col-md-6">
+        <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
+    </div>
         <div *ngFor='let quote of quotes;let i = index'>
           <div>
             <h6 id={{i}} appStrikethrough>{{quote.name}} created on {{quote.completeDate|date|uppercase}}</h6>
@@ -19,5 +21,5 @@
         <app-quote-form></app-quote-form>
       </div>
     </div>
-    <p *ngIf='quotes.length > 5'>You have too many interesting quotes</p>
-  </div>
+    <p> *ngIf='quotes.length > 5'>You have too many interesting quotes</p>
+  
