--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -20,6 +20,8 @@
       <div class="col-md-6">
         <app-quote-form></app-quote-form>
       </div>
+      <p *ngIf='quotes.length > 5'>You have too many interesting quotes</p>
     </div>
-    <p> *ngIf='quotes.length > 5'>You have too many interesting quotes</p>
+    
+    
   
