--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -15,7 +15,7 @@
   
         </div>
         <div class="form-group">
-            <label for="description">Description</label>
+            <label for="description">quote</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
               <p>Description is required</p>
@@ -25,10 +25,10 @@
   
         </div>
         <div class="form-group">
-            <label for="complete">Completion</label>
+            <label for="complete">date-when-created</label>
             <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate" #completeDate="ngModel" required>
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
-              <p>Date is required</p>
+              <p>Date of creation is required</p>
             </div>
             
   
