--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,3 @@
 <p>{{quote.description}}</p>
-<p>This quote will be complete in {{quote.completeDate|dateCount}} days</p>
+<p>This quote has stayed for {{quote.completeDate|dateCount}} days</p>
 <button (click)= 'quoteDelete(true)'>Delete Quote</button>
