--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -2,7 +2,7 @@
 <p>This quote has stayed for {{quote.completeDate|dateCount}} days</p>
 <button (click)= 'quoteDelete(true)'>Delete Quote</button>
 
-<div class="votes">
+<div class="vote">
     <div>
         <button class="btn btn-outline-secondary btn-lg btn-block btnVotes" (click) =upvoteCLick()>Upvote</button>
         <p>{{upvotes}}</p>
