--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -7,7 +7,7 @@
             <label for="name">author</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Name is to be inputed</p>
+              <p>Author is to be inputed</p>
             </div>
   
             
@@ -18,7 +18,7 @@
             <label for="description">quote</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-              <p>quote is required</p>
+              <p>quote is to be inputed</p>
             </div>
   
             
@@ -28,7 +28,7 @@
             <label for="complete">date-when-created</label>
             <input type='date' id="complete" [(ngModel)]="newQuote.completeDate" name="completeDate" #completeDate="ngModel" required>
             <div [hidden]="completeDate.valid || completeDate.pristine" class="alert alert-danger">
-              <p>Date of creation is required</p>
+              <p>Date of creation is to be inputed</p>
             </div>
             
   
