--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -9,7 +9,7 @@
         <div *ngFor='let quote of quotes;let i = index'>
           <div>
             <h6 id={{i}} appStrikethrough>{{quote.name}} created on {{quote.completeDate|date|uppercase}}</h6>
-            <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
+            <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Quote</button>
           </div>
   
           <div *ngIf='quote.showDescription'>
