--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -4,10 +4,10 @@
     <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
     
         <div class="form-group">
-            <label for="name">author</label>
+            <label for="name">quote</label>
             <input type="text" class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name='ngModel' required>
             <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <p>Author is to be inputed</p>
+              <p>quote is to be inputed</p>
             </div>
   
             
