--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -15,10 +15,10 @@
   
         </div>
         <div class="form-group">
-            <label for="description">quote</label>
+            <label for="description">author</label>
             <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-              <p>quote is to be inputed</p>
+              <p>author is to be inputed</p>
             </div>
   
             
